--- a/www/realizar_inspeccion_tecnico.html
+++ b/www/realizar_inspeccion_tecnico.html
@@ -5,13 +5,11 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/font-awesome.css" />
-
-        <link rel="stylesheet" href="css/resumable.css" />
   </head>
   <body>
     <!-- navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
-      <h4 class="text-muted titulo text-center">Inspeccionar</h4>
+      <h4 class="text-muted titulo text-center">Inspecciónar</h4>
       <div class="container-fluid">
         <a class="navbar-link navbar-brand" href="#" onclick="history.go(-1);"><i class="fa fa-arrow-circle-left text-md"></i></a>
         <div class="navbar-header">
@@ -21,14 +19,28 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a  onclick="guardar('Asesor')" class="navbar-link navbar-toggle"><i class="fa fa-paper-plane text-md"> </i></a>
-		  <a id="guardar" href="#" onclick="guardar(0)" class="navbar-link navbar-toggle"><i class="fa fa-save text-md"> </i></a>
-		  <div id="buttonmenu" name="buttonmenu"></div>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul id="menudinamico" name="menudinamico" class="nav navbar-nav navbar-right">
-          </ul>
-		  <ul id="menudefault" name="menudefault" class="nav navbar-nav navbar-right">     
+          <ul class="nav navbar-nav navbar-right">
+            <li class="hidden-sm hidden-md hidden-lg"><a href="index.html" class="navbar-link">Log In</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="asesor.html" class="navbar-link">Asesor</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="clientes.html" class="navbar-link">Clientes</a></li>
+            <li><a id="guardar" href="#" onclick="guardar()" class="navbar-link"><i class="fa fa-save text-md"> </i></a></li>
+            <li><a href="#"  onclick="push('admin')" class="navbar-link"><i class="fa fa-paper-plane text-md"> </i></a></li>
+            <li class="dropdown visible-sm visible-md visible-lg">
+              <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars text-md"> </i></a>
+              <ul class="dropdown-menu">
+                <li><a href="index.html" class="navbar-link">Log In</a></li>
+                <li><a href="asesor.html" class="navbar-link">Asesor</a></li>
+                <li><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+                <li><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
+                <li><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
+                <li><a href="clientes.html" class="navbar-link">Clientes</a></li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
@@ -36,53 +48,29 @@
     <div class="container-fluid my-container">
       <div class="row">
         <div class="col-xs-1">
-          <h1><a href="dashboard.html"><img name="logo" id='logo' src="" width="70px"></a></h1>
+          <h1><img src="img/logo-bosh.jpg" width="70px"></h1>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12">        
+        <div class="col-xs-12">
           <div class="panel panel-default">
-            <div class="panel-heading">
-                <div class="form-group">
+            <div class="panel-heading">                            
+                <div class="form-group">                  
                   <div class="input-group">
                     <div class="input-group-addon">Modelo</div>
                     <input type="text" size="10" class="form-control" value="" id="model">
-                    <input type="hidden" size="10" class="form-control" value="" id="vehicle_id">
-                    <input type="hidden" size="10" class="form-control" value="" id="inspections_id">
-                  </div>
+                    <input type="hidden" size="10" class="form-control" value="" id="vehicle_id">                               <input type="hidden" size="10" class="form-control" value="" id="inspections_id">
+
+                  </div>                  
                   <div class="input-group">
                     <div class="input-group-addon">Placa</div>
                     <input type="text" size="10" class="form-control" value="" id="license_plate">
                   </div>
-                </div>
+                </div>            
             </div>
-            <div id="status"></div>
             <div class="table-responsive">
               <table class="table table-striped default-table">
                 <thead>
-                  <tr>
-                    <td colspan="5">
-                      <div id="frame">
-                        <div class="resumable-drop" ondragenter="jQuery(this).addClass('resumable-dragover');" ondragend="jQuery(this).removeClass('resumable-dragover');" ondrop="jQuery(this).removeClass('resumable-dragover');">
-                          Drop video files here to upload or <a class="resumable-browse"><u>select from your computer</u></a>
-                        </div>
-                        <div class="resumable-progress">
-                          <table>
-                            <tr>
-                              <td width="100%"><div class="progress-container"><div class="progress-bar"></div></div></td>
-                              <td class="progress-text" nowrap="nowrap"></td>
-                              <td class="progress-pause" nowrap="nowrap">
-                                <a href="#" onclick="r.upload(); return(false);" class="progress-resume-link"><img src="img/resume.png" title="Resume upload" /></a>
-                                <a href="#" onclick="r.pause(); return(false);" class="progress-pause-link"><img src="img/pause.png" title="Pause upload" /></a>
-                                <a href="#" onclick="r.cancel(); return(false);" class="progress-cancel-link"><img src="img/cancel.png" title="Cancel upload" /></a>
-                              </td>
-                            </tr>
-                          </table>
-                        </div>
-                        <ul class="resumable-list"></ul>
-                      </div>
-                    </td>
-                  </tr>
                   <tr>
                     <th class="text-center">Severidad</th>
                     <th class="text-left">Inspecci&oacute;n</th>
@@ -91,27 +79,22 @@
                     <th class="text-center">Ver</th>
                   </tr>
                 </thead>
-                <tbody id='table-inspections'>
+                <tbody id='table-inspections'>                
                 </tbody>
               </table>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </div>  
+    <script src='cordova.js'></script>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script type="text/javascript" src="js/resumable.js"></script>
-    <script type="text/javascript" src="js/config.js"></script>
+    <script type="text/javascript" src="js/inspeccion_tecnico.js"></script>  
     <script type="text/javascript" src="js/localstorage.js"></script>
-    <script type="text/javascript" src="js/capture_uploader.js"></script>
-    <script type="text/javascript" src="js/inspeccion_tecnico.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
-    <script src='cordova.js'></script>
     <script type="text/javascript">
         $(document).ready(function() {
             gridInspections();
-			menu(0,0);
         });
      </script>
   </body>
