--- a/www/alta_cliente.html
+++ b/www/alta_cliente.html
@@ -9,7 +9,7 @@
   <body>
     <!-- navbar -->
     <nav class="navbar navbar-default navbar-fixed-top">
-      <h4 class="text-muted titulo text-center">Resultado de inspección</h4>
+      <h4 class="text-muted titulo text-center">Alta cliente</h4>
       <div class="container-fluid">
         <a class="navbar-link navbar-brand" href="#" onclick="history.go(-1);"><i class="fa fa-arrow-circle-left text-md"></i></a>
         <div class="navbar-header">
@@ -19,12 +19,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+		  <a name="agregarAutos" id="agregarAutos" href="alta_vehiculo.html" class="navbar-link navbar-toggle"><i class="fa fa-car text-md"> </i></a>
+		  <a id="guardarcliente" name="guardarcliente" onclick="accion_cliente();" class="navbar-link navbar-toggle"><i class="fa fa-save text-md"> </i></a>
+		  <!--<div id="buttonmenu" name="buttonmenu"></div>-->
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
+		   <ul id="menudinamico" name="menudinamico" class="nav navbar-nav navbar-right">
+           </ul>
+		   <ul id="menudefault" name="menudefault" class="nav navbar-nav navbar-right">
+           </ul>
+          <!--<ul class="nav navbar-nav navbar-right">
             <li class="hidden-sm hidden-md hidden-lg"><a href="index.html" class="navbar-link">Log In</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="asesor.html" class="navbar-link">Asesor</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="clientes.html" class="navbar-link">Clientes</a></li>
@@ -33,22 +39,22 @@
             <li class="dropdown visible-sm visible-md visible-lg">
               <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars text-md"> </i></a>
               <ul class="dropdown-menu">
+
                 <li><a href="index.html" class="navbar-link">Log In</a></li>
-                <li><a href="asesor.html" class="navbar-link">Asesor</a></li>
-                <li><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+                <li><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
                 <li><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
                 <li><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
                 <li><a href="clientes.html" class="navbar-link">Clientes</a></li>
               </ul>
             </li>
-          </ul>
+          </ul>-->
         </div>
       </div>
     </nav><!-- navbar -->
     <div class="container-fluid my-container">
       <div class="row">
         <div class="col-xs-1">
-          <h1><img src="img/logo-bosh.jpg" width="70px"></h1>
+          <h1><a href="dashboard.html"><img name="logo" id='logo' src="" width="70px"></a></h1>
         </div>
       </div>
       <div class="row">
@@ -84,7 +90,7 @@
                   </div>
                 </div>
               </form>
-			<div id="alertaCliente" class="text-center text-red"></div>
+			        <div id="alertaCliente" class="text-center text-red"></div>
             </div>
             <div class="table-responsive">
               <table class="table table-striped default-table">
@@ -104,11 +110,14 @@
     </div>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
-	<script type="text/javascript" src="js/localstorage.js"></script>
+    <script type="text/javascript" src="js/config.js"></script>
+  	<script type="text/javascript" src="js/localstorage.js"></script>
+  	<script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/style.js"></script>
 	  <script>
 		  $(document).ready(function() {
 		  	obtener_datos_cliente();
+			  menu(0,0);
 		  });
 	  </script>
   </body>
