--- a/www/cliente_detalle.html
+++ b/www/cliente_detalle.html
@@ -19,37 +19,21 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+		  <a id="addcliente" name="addcliente" href="alta_cliente.html" class="navbar-link navbar-toggle"><i class="fa fa-plus-circle"></i></a>
+		  <!--<div id="buttonmenu" name="buttonmenu"></div>-->
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="hidden-sm hidden-md hidden-lg"><a href="index.html" class="navbar-link">Log In</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="asesor.html" class="navbar-link">Asesor</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="clientes.html" class="navbar-link">Clientes</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="cliente_detalle.html" class="navbar-link">Clientes detall</a></li>
-			<li><a href="alta_cliente.html" class="navbar-link"><i class="fa fa-plus-circle"></i> Agregar cliente</a></li>
-            <li class="dropdown visible-sm visible-md visible-lg">
-              <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars"> </i></a>
-              <ul class="dropdown-menu">
-                <li><a href="index.html" class="navbar-link">Log In</a></li>
-                <li><a href="asesor.html" class="navbar-link">Asesor</a></li>
-                <li><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
-                <li><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
-                <li><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
-                <li><a href="clientes.html" class="navbar-link">Clientes</a></li>
-                <li><a href="cliente_detalle.html" class="navbar-link">Cliente detalle</a></li>
-              </ul>
-            </li>
-          </ul>
+			<ul id="menudinamico" name="menudinamico" class="nav navbar-nav navbar-right">
+			</ul>
+			<ul id="menudefault" name="menudefault" class="nav navbar-nav navbar-right">
+			</ul>
         </div>
       </div>
     </nav><!-- navbar -->
     <div class="container-fluid my-container">
       <div class="row">
         <div class="col-xs-1">
-          <h1><img src="img/logo-bosh.jpg" width="70px"></h1>
+          <h1><a href="dashboard.html"><img name="logo" id='logo' src="" width="70px"></a></h1>
         </div>
       </div>
       <div class="row">
@@ -67,13 +51,15 @@
             <div class="table-responsive">
               <table class="table table-striped default-table">
                 <thead class="margin-0">
-                    <tr id="model">
-                       
+                    <tr>
+                        <th width="80%">Nombre</th>
+                        <th class="text-center">Eliminar</th>
+                        <th class="text-center">Visualizar</th>
                     </tr>
                 </thead>
                 <tbody id="table-clients-users"></tbody>
               </table>
-				<div id="alertaCliente" class="text-center text-red"></div>
+				      <div id="alertaCliente" class="text-center text-red"></div>
             </div>
             <div class="panel-footer"></div>
           </div>
@@ -81,14 +67,22 @@
       </div>
     </div>
     <script type="text/javascript" src="js/jquery.js"></script>
+
     <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/detalle.js"></script>
     <script type="text/javascript" src="js/localstorage.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/style.js"></script>
+    <script type="text/javascript" src="js/push.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function() {
-            gridDetalleInspeccion();
+            //gridDetalleInspeccion();
+            obtenerclients();
+			menu(0,0);
         });
-		
+
      </script>
   </body>
