--- a/www/tecnico.html
+++ b/www/tecnico.html
@@ -19,12 +19,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
+		  <div id="buttonmenu" name="buttonmenu"></div>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li class="hidden-sm hidden-md hidden-lg"><a href="index.html" class="navbar-link">Log In</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="asesor.html" class="navbar-link">Asesor</a></li>
-            <li class="hidden-sm hidden-md hidden-lg"><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+            <li class="hidden-sm hidden-md hidden-lg"><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
             <li class="hidden-sm hidden-md hidden-lg"><a href="cliente_detalle.html" class="navbar-link">Clientes</a></li>
@@ -32,8 +32,7 @@
               <a href="#" class="dropdown-toggle navbar-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars text-md"> </i></a>
               <ul class="dropdown-menu">
                 <li><a href="index.html" class="navbar-link">Log In</a></li>
-                <li><a href="asesor.html" class="navbar-link">Asesor</a></li>
-                <li><a href="tecnico.html" class="navbar-link">Tecnico</a></li>
+                <li><a href="dashboard.html" class="navbar-link">Dashboard</a></li>
                 <li><a href="nueva_inspeccion.html" class="navbar-link">Nueva Inspeccion</a></li>
                 <li><a href="realizar_inspeccion.html" class="navbar-link">Realizar Inspeccion</a></li>
                 <li><a href="cliente_detalle.html" class="navbar-link">Clientes</a></li>
@@ -46,7 +45,7 @@
     <div class="container-fluid my-container">
       <div class="row">
         <div class="col-xs-1">
-          <h1><img src="img/logo-bosh.jpg" width="70px"></h1>
+          <h1><a href="dashboard.html"><img name="logo" id='logo' src="" width="70px"></a></h1>
         </div>
       </div>
       <div class="row">
@@ -76,23 +75,6 @@
                     <th class="text-center">Modificar</th>
                   </tr>
                 </thead>
-               <!-- <tbody>
-                  <tr>
-                    <td class="text-left">Jose Luis Gonzalez Robles Volkswagen JDS2131</td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-search"> </i> En revision</a></td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-chevron-right"> </i> </a></td>
-                  </tr>
-                  <tr>
-                    <td class="text-left">Jose Luis Gonzalez Robles Volkswagen JDS2131</td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-clock-o "> </i> Espera cliente</a></td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-chevron-right"> </i> </a></td>
-                  </tr>
-                  <tr>
-                    <td class="text-left">Jose Luis Gonzalez Robles Volkswagen JDS2131</td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-comments-o "> </i> Respondido</a></td>
-                    <td class="text-center"><a href="#" class="btn-link btn-md"><i class="fa fa-chevron-right"> </i> </a></td>
-                  </tr>
-                </tbody> -->
               </table>
             </div>
           </div>
@@ -102,7 +84,9 @@
     <script src='cordova.js'></script>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/config.js"></script>
     <script type="text/javascript" src="js/localstorage.js"></script>
     <script type="text/javascript" src="js/push.js"></script>
+    <script type="text/javascript" src="js/style.js"></script>
   </body>
 </html>
