--- a/www/tecnicos.html
+++ b/www/tecnicos.html
@@ -35,12 +35,11 @@
               <table class="table table-striped default-table">
                 <thead class="margin-0">
                     <tr>
-                        <th width="80%">Nombre</th>
-                        <th class="text-center">Eliminar</th>
-                        <th class="text-center">Visualizar</th>
+                        <th width="80%">Tecnico</th>
+                        <th class="text-center">Asignar</th>
                     </tr>
                 </thead>
-                <tbody id="table-clients-users"></tbody>
+                <tbody id="tecnicos"></tbody>
               </table>
 				      <div id="alertaCliente" class="text-center text-red"></div>
             </div>
@@ -55,9 +54,9 @@
     <script type="text/javascript" src="js/filter.js"></script>
     <script type="text/javascript" src="js/inspections.js"></script>
     <script type="text/javascript" src="js/vehiculos.js"></script>
-    <script type="text/javascript" src="js/clientes.js"></script>
+    <script type="text/javascript" src="js/tecnicos.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript">
-      document.addEventListener("deviceready", obtenerclients, false);
+      document.addEventListener("deviceready", obtenerTecnicos, false);
      </script>
   </body>
