--- a/www/realizar_inspeccion.html
+++ b/www/realizar_inspeccion.html
@@ -5,9 +5,12 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/font-awesome.css" />
+    <link type="image/x-icon" href="/img/logo.ico" rel="icon" />
+    <link type="image/x-icon" href="/img/logo.ico" rel="shortcut icon" />
     <title>Realizar inspección</title>
   </head>
   <body>
+    <div id="loading"><div id="loader"></div></div>
     <!-- navbar -->
     <div id="navbar"></div>
     <div class="container-fluid my-container">
@@ -21,21 +24,23 @@
           <div class="panel panel-default">
             <div class="panel-heading">
                 <div class="form-group">
-                  <div class="input-group">
-                    <div class="input-group-addon">Modelo</div>
+                  <div class="input-group add-on">
+                    <label class="input-group-addon ">Modelo</label>
                     <input type="text" size="10" class="form-control" value="" id="model">
                     <input type="hidden" size="10" class="form-control" value="" id="vehicle_id">
                     <input type="hidden" size="10" class="form-control" value="" id="inspections_id">
                   </div>
-                  <div class="input-group">
-                    <div class="input-group-addon">Placa</div>
+                  </div>
+                  <div class="form-group">
+                    <div class="input-group add-on">
+                    <label class="input-group-addon ">Placa</label>
                     <input type="text" size="10" class="form-control" value="" id="license_plate">
                   </div>
                 </div>
-            </div>
+                </div>
             <div id="status"></div>
             <div class="table-responsive">
-              <table class="table table-striped default-table">
+              <table class="table default-table">
                 <thead>
                   <tr>
                     <th class="text-center">Severidad</th>
@@ -61,7 +66,6 @@
     <script type="text/javascript" src="js/inspections.js"></script>
     <script type="text/javascript" src="js/capture_uploader.js"></script>
     <script type="text/javascript" src="js/inspeccion_tecnico.js"></script>
-    <script type="text/javascript" src="js/push.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
   </body>
 </html>
