--- a/www/resultado_inspeccion.html
+++ b/www/resultado_inspeccion.html
@@ -5,15 +5,18 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/font-awesome.css" />
-    <title>Resultado inspección</title>
+    <link type="image/x-icon" href="/img/logo.ico" rel="icon" />
+    <link type="image/x-icon" href="/img/logo.ico" rel="shortcut icon" />
+    <title>Inspección</title>
   </head>
   <body>
+    <div id="loading"><div id="loader"></div></div>
     <!-- navbar -->
     <div id="navbar"></div>
     <div class="container-fluid my-container">
       <div class="row">
         <div class="col-xs-1">
-          <h1><img src="img/logo-bosh.jpg" width="70px"></h1>
+            <h1><img name="logo" id='logo' src="" width="70px"></h1>
         </div>
       </div>
       <div class="row">
@@ -23,46 +26,55 @@
               <h4 class="">Datos del cliente</4h>
               <form class="form-inline my-form">
                 <div class="form-group">
-                  <div class="input-group">
-                    <div class="input-group-addon">Nombre</div>
+                  <div class="add-on input-group">
+                    <label class="input-group-addon">Nombre</label>
                     <input type="text" class="form-control" id="name" value="">
                   </div>
-                  <div class="input-group">
-                    <div class="input-group-addon">Celular</div>
-                    <input type="text" class="form-control" id="cell" value="">
-                  </div>
-                  <div class="input-group">
-                    <div class="input-group-addon">Email</div>
+                   </div>
+                  <div class="form-group ">
+                      <div class="add-on input-group">
+                        <label class="input-group-addon">Celular</label>
+                        <input type="text" class="form-control" id="cell" value="">
+                      </div>
+                   </div>
+                   <div class="form-group ">
+                  <div class="add-on input-group">
+                    <label class="input-group-addon">Email</label>
                     <input type="text" class="form-control" id="email" value="">
+                    </div>
                   </div>
-                </div>
               </form>
               <h4  class=" ">Datos del vehiculo</4h>
               <form class="form-inline my-form">
+                  <input type="hidden" size="10" class="form-control" value="" id="vehicle_id">
+                  <input type="hidden" size="10" class="form-control" value="" id="inspection_id">
                 <div class="form-group ">
-                  <div class="input-group">
-                    <div class="input-group-addon">Marca</div>
+                  <div class="add-on input-group">
+                    <label class="input-group-addon">Marca</label>
                     <input type="text" size="10" id="brand"  class="form-control" value="">
                   </div>
                 </div>
-                  <div class="input-group  ">
-                    <div class="input-group-addon">Modelo</div>
+                <div class="form-group">
+                  <div class="add-on input-group">
+                    <label class="input-group-addon">Modelo</label>
                     <input type="text" size="10" class="form-control" value="" id="model">
-                    <input type="hidden" size="10" class="form-control" value="" id="vehicle_id">
-                    <input type="hidden" size="10" class="form-control" value="" id="inspection_id">
                   </div>
-                  <div class="input-group  ">
-                    <div class="input-group-addon">VIN</div>
-
+                </div>
+                <div class="form-group">
+                  <div class="add-on input-group">
+                    <label class="input-group-addon">VIN</label>
                     <input type="text" size="10" id="vin" class="form-control" value="">
                   </div>
-                  <div class="input-group   ">
-                    <div class="input-group-addon">Placa</div>
-                    <input type="text" size="10" class="form-control" value="" id="license_plate">
-                  </div>
+                </div>
+                <div class="form-group">
+                  <div class="add-on input-group">
+                        <label class="input-group-addon">Placa</label>
+                        <input type="text" size="10" class="form-control" value="" id="license_plate">
+                    </div>
+                </div>
               </form>
             </div>
-              <label class="btn btn-link" for="pdf">Pdf</label>
+
             <div class="table-responsive">
               <table class="table table-striped default-table">
                 <thead>
@@ -78,7 +90,7 @@
               </table>
             </div>
             <form id="pdfform"  enctype="multipart/form-data">
-              <input id="pdf" class="pdf hide" type="file" />
+              <input id="pdf" accept=".pdf" class="pdf hide" type="file" />
             </form>
           </div>
         </div>
