plugins audio y notificaciones

--- a/www/dashboard.html
+++ b/www/dashboard.html
@@ -58,6 +58,7 @@
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/localstorage.js"></script>
+    <script type="text/javascript" src="js/push.js"></script>
     <script type="text/javascript" src="js/commun.js"></script>
     <script type="text/javascript" src="js/filter.js"></script>
     <script type="text/javascript" src="js/inspections.js"></script>
