--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,7 @@
 
             <div class="row">
                 <div class="col-xs-12 text-center mt-5">
-                    <a onclick="resetPassword();" class="text-white">¿Olvidaste tu contraseña?</a>
+                    <a onclick="resetPassword();" class="text-white">¿Olvido su contraseña?</a>
                 </div>
             </div>
         </div>
