--- a/www/tecnicos.html
+++ b/www/tecnicos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/font-awesome.css" />
     <link type="image/x-icon" href="/img/logo.ico" rel="icon" />
     <link type="image/x-icon" href="/img/logo.ico" rel="shortcut icon" />
-    <title>Cliente</title>
+    <title>Asignar técnico</title>
   </head>
   <body>
     <div id="loading"><div id="loader"></div></div>
@@ -35,7 +35,7 @@
               <table class="table table-striped default-table">
                 <thead class="margin-0">
                     <tr>
-                        <th width="80%">Tecnico</th>
+                        <th width="80%">Técnico</th>
                         <th class="text-center">Asignar</th>
                     </tr>
                 </thead>
